--- a/app/views/globalSideNav/globalSideNav.html
+++ b/app/views/globalSideNav/globalSideNav.html
@@ -24,7 +24,7 @@
       			 	arrow_upward
       			 </md-icon> sign up
       		</md-button>
-      		<md-button class="text-start" href=''>
+      		<md-button class="text-start" href='' ng-click="vm.openContactForm();">
       			<md-icon class="material-icons md-light md-24">
       			 	call
       			 </md-icon> Contact Us
