--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -63,7 +63,7 @@
 <section class="row bg-grey all_Services">
 	<div class="container text-center services_text">
 		<div class="h2 theme-color-white">
-			WHAT DO WE HAVE FOR YOU
+			YOUR EVENT - A SUCCESS
 
 			<hr>
 		</div>
