committing 404 page changes

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -45,6 +45,8 @@ html, body {
 	-o-user-select: none;
 	-ms-user-select: none;
 	-webkit-touch-callout: none !important; 
+	-webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 	height: auto; /* angular-material override */
 }
 
