--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -76,8 +76,8 @@
 			<div class="no-records-found col-xs-12 col-sm-8" ng-if="vm.resultList.length == 0">
 							<div>
 								<h2>No Results Found!!</h2>
-								<img src="/images/no_content-found_image.png" height="250px;"/>
-								
+								<!--<img src="/images/no_content-found_image.png" height="250px;"/>-->
+								<img src="/images/no-results.gif" height="300px;" width="400px"/>
 								<h4>Please try something else</h4>
 								<a href="/">Back to Home</a>
 							</div>
