--- a/app/views/globalSideNav/globalSideNav.html
+++ b/app/views/globalSideNav/globalSideNav.html
@@ -14,7 +14,7 @@
       <md-content layout-margin layout-fill class="globalSideNav-main-content">
       	<div layout='column' layout-align="center start">
       		<div style="min-height: 30px;"></div>
-      		<md-button class="text-start" href=''>
+      		<!--<md-button class="text-start" href=''>
       			<md-icon class="material-icons md-light md-24">
       			 	perm_identity
       	</md-icon> sign in
@@ -23,7 +23,7 @@
       			<md-icon class="material-icons md-light md-24">
       			 	arrow_upward
       			 </md-icon> sign up
-      		</md-button>
+      		</md-button>-->
       		<md-button class="text-start" href='' ng-click="vm.openContactForm();">
       			<md-icon class="material-icons md-light md-24">
       			 	call
