--- a/app/views/header/header.html
+++ b/app/views/header/header.html
@@ -13,12 +13,12 @@
 							<span class="fa fa-fw fa-map-marker location-icon"></span>
 						</md-button>
 					</li>
-					<li class="hidden-xs">
+					<li class="hidden-xs" ng-if="false">
 						<md-button style="color: white;">
 							SIGN IN
 						</md-button>
 					</li>
-					<li class="hidden-xs">
+					<li class="hidden-xs" ng-if="false">
 						<md-button style="color: white;">
 							SIGN UP
 						</md-button>
