--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -67,6 +67,9 @@
          <a href='tel:+917222034001'><li itemprop="telephone">
             <strong>+917222034001</strong>
          </li></a>
+         <a href='tel:+917087754001'><li itemprop="telephone">
+            <strong>+917087754001</strong>
+         </li></a>
          <li>or</li>
          <li>Write to us</li>
          <a href="mailto:lepartycious@gmail.com"><li itemprop="email"><strong>lepartycious@gmail.com</strong></li></a>
