--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -181,7 +181,7 @@
 			
 		
 		<!-- Applying swiper Carousel -->
-		<div class="swiper-container customerssay-swiper-container" swiper-carousel speed="700" space-between="0" auto-play="10000" effect="slide" pagination="customerssay-swiper-pagination" pagination-type="bullets" pagination-clickable="true">
+		<div class="swiper-container customerssay-swiper-container" swiper-carousel speed="700" space-between="0" auto-play="10000" effect="slide" pagination="customerssay-swiper-pagination" pagination-type="bullets" pagination-clickable="true" swiper-obj="vm.customersaySwiperObj">
 		<!-- Additional required wrapper -->
 		<div class="swiper-wrapper customerssay-swiper-wrapper">
 			<!-- Slides -->
@@ -245,7 +245,7 @@
 		<hr>
 	</div>
 	<!-- Slider main container -->
-	<div class="swiper-container portfolio-swiper-container" swiper-carousel initial-slide="2" effect="coverflow" grab-cursor="true" centered-slides="true" slides-per-view="auto" next-button="portfolio-swiper-button-next" prev-button="portfolio-swiper-button-prev" preload-images="false" lazy-loading="true" space-between="20" coverflow="vm.showcaseSwiperCoverflow">
+	<div class="swiper-container portfolio-swiper-container" swiper-carousel initial-slide="2" effect="coverflow" grab-cursor="true" centered-slides="true" slides-per-view="auto" next-button="portfolio-swiper-button-next" prev-button="portfolio-swiper-button-prev" preload-images="false" lazy-loading="true" space-between="20" coverflow="vm.showcaseSwiperCoverflow" swiper-obj="vm.portfolioSwiperObj">
 		<!-- Additional required wrapper -->
 		<div class="swiper-wrapper">
 			<!-- Slides -->
