--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -861,6 +861,10 @@ background: white;
 	background-position: 0px !important;     left: 34px;
 }
 
+.swiper-button-next{
+	right: 34px;
+}
+
 .lp-global-breadcrumb{
 	min-height: 50px;
 }
