--- a/app/views/detail/detail.html
+++ b/app/views/detail/detail.html
@@ -484,13 +484,13 @@
 							</div>
 						</div>
 						</div>
-					</section>		
+					</section>	
 				</div>
 			</div>
 		</div>
 	</div>
 
-<give-review editable="true" vendor-rating="vm.newReviewModel.vendorRating" stars-count="5" show-grade="true" review-money="vm.newReviewModel.reviewMoney" review-comment="vm.newReviewModel.reviewComment" submit-review="vm.newReviewModel.submitReview();" ></give-review>
+<give-review editable="true" vendor-rating="vm.newReviewModel.vendorRating" stars-count="5" show-grade="true" review-money="vm.newReviewModel.reviewMoney" review-comment="vm.newReviewModel.reviewComment" submit-review="vm.newReviewModel.submitReview();" apply-margin="true" ></give-review>
 
 <div class="row bg-grey">
 	<div class="gap20"></div>
