--- a/app/views/giveReview/giveReview.html
+++ b/app/views/giveReview/giveReview.html
@@ -1,4 +1,4 @@
-<md-card  class="mLeft15 mRight15 marginTopBottom20">
+<md-card  class="marginTopBottom20" ng-class="{'mLeft15': applyMargin, 'mRight15': applyMargin}">
 <form name="reviewForm">
 <div layout="column" layout-padding>
 	<div layout="row" layout-align="start center">
