--- a/app/views/ribbon/ribbon.html
+++ b/app/views/ribbon/ribbon.html
@@ -6,12 +6,12 @@
 		
 					<md-button class="md-fab filter-btn" aria-label="Filter" ng-click="vm.filterResults();vm.filterRibbonButtonHandler();">
             <i class="material-icons" style="vertical-align: middle">filter_list</i>
-            <p style="text-transform: initial; color: #EE3E20;">Filter</p>
+            <p style="text-transform: initial; color: #EE3E20; line-height: 24px">Filter</p>
         </md-button>
         
         <md-button class="md-fab clear-btn" aria-label="Clear" ng-click="vm.resetFilters();">
             <i class="material-icons" style="vertical-align: middle">clear_all</i>
-            <p style="text-transform: initial; color: rgba(0,0,0,0.87);">Clear</p>
+            <p style="text-transform: initial; color: rgba(0,0,0,0.87); line-height: 24px">Clear</p>
         </md-button>
 		
 		<!--<md-button class="md-primary md-raised filter-btn" ng-click="vm.filterResults();vm.filterRibbonButtonHandler();" style="min-width: 65px">Filter</md-button>			
