--- a/app/styles/data.css
+++ b/app/styles/data.css
@@ -15,6 +15,9 @@
 	border-radius: 2px;
 	box-shadow: 0 2px 10px 0 rgba(125,124,122,0.5);
 	padding: 5px;
+	margin-left: auto;
+    margin-right: auto;
+    max-width: 220px;
 }
 
 .pamphlet-container .pamphlet-header {
